# birthday_display

./: .gitignore  Cargo.toml  README.md  Zeitaufwand  flake.nix  userdata.csv
src/: csv.rs  error_wrapper.rs  main.rs  person.rs
