[package]
name = "birthday_display"
version = "0.1.0"
edition = "2021"
description = "A program to display birthdays from csv file"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.iced]
version = "0"
features = [ "tokio", "image" ]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.chrono]
version = "0"
features = [ "serde" ]

[dependencies.clap]
version = "4"
features = [ "derive" ]

[dependencies]
csv = "1"
reqwest = "0"
