[package]
name = "birthday_display"
version = "0.1.0"
edition = "2021"
description = "A program to display birthdays from csv file"
license-file = "LICENSE"

[profile.release]
strip = true
lto = true

[features]
glow = [ "iced/glow" ]
debug = [ "iced/debug" ]

[dependencies]
csv = "1"
reqwest = "0"
bytes = "1"

[dependencies.iced]
version = "0"
features = [ "tokio", "image" ]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.chrono]
version = "0"
features = [ "serde" ]

[dependencies.clap]
version = "4"
features = [ "derive" ]
